# sucm

./: LICENSE  README.md  app.py  pyproject.toml  sucm_app.py
ci-scripts/: Dockerfile  pipeline_sucm.groovy
conf/: sucm_conf.ini_example
sucm/: __init__.py  harica-approve-test.py  harica-login2fa-test-final.py  haricatest.py  haricatestgpt.py  sucm_automation.py  sucm_certificate.py  sucm_certificateauthority.py  sucm_common.py  sucm_db.py  sucm_globals.py  sucm_notifygroup.py  sucm_routes.py  sucm_settings.py
sucm/plugins/: sectigo_eab.py  su_vault.py  sucm_vault.py
sucm/sucm_certificateauthority/: __init__.py  harica_eab.py  sectigo_eab.py
sucm/sucm_secret/: __init__.py  su_vault.py  sucm_vault.py
sucm/templates/: active_certs.html  base.html  certificates_submenu.html  edit_cert.html  edit_group.html  index.html  inspect_active_cert.html  inspect_cert.html  notifygroups.html  submit_csr.html
templates/: automation.html  base.html  certificates_submenu.html  edit_cert.html  edit_group.html  faq.html  index.html  inspect_active_cert.html  inspect_cert.html  submit_csr.html  template.html
